--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ out
 # Nuxt.js build / generate output
 
 .nuxt
-dist
+# dist
 
 # Gatsby files
 
@@ -158,6 +158,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 
+.vscode
 .vscode-test
 
 # yarn v2
