--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "danmaku": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "scripts": {
+    "prettier": "prettier --write src",
+    "lint": "eslint src --fix"
   }
 }
