--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "danmu",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/react": "^18.2.51",
-    "@types/react-dom": "^18.2.18",
-    "@types/tampermonkey": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "eslint": "^8.56.0",
-    "prettier": "^3.2.4",
-    "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@types/bun": "^1.2.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/tampermonkey": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "antd": "^5.14.0",
-    "danmaku": "^2.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "antd": "^5.23.2",
+    "crypto-js": "^4.2.0",
+    "danmaku": "^2.0.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "scripts": {
     "prettier": "prettier --write src",
